objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <description>old UE date/time</description>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From old UE instance</description>
        <label>LastModifiedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <description>old UE instance</description>
        <label>LastModified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_CampaignId__c</fullName>
        <description>old UE Id</description>
        <label>Previous CampaignId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>